# ENSC251FinalProject

./: .gitignore  CMakeLists.txt  Makefile  StringHelper.cpp  StringHelper.hpp  StudentList.cpp  StudentList.hpp  StudentNode.cpp  StudentNode.hpp  TOEFLScore.cpp  TOEFLScore.hpp  domesticStudent.cpp  domesticStudent.hpp  international-stu.txt  internationalStudent.cpp  internationalStudent.hpp  main.cpp  student.cpp  student.hpp
.github/workflows/: c-cpp.yml
test/: CMakeLists.txt  sortingTest.cpp  studentListTest.cpp  studentTest.cpp
